--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-title></app-title>
-<app-game-nav-bar></app-game-nav-bar>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+    </head>
+    <body>
+        <app-title></app-title>
+        <app-game-nav-bar></app-game-nav-bar>
+        <app-game-board></app-game-board>
+    </body>
+</html>
