Validate button displaying

--- a/src/app/player-selector/player-selector.component.html
+++ b/src/app/player-selector/player-selector.component.html
@@ -8,5 +8,8 @@
         <mat-icon svgIcon="remove"></mat-icon>
     </button>
 </div>
+<button mat-fab extended class="validate" [disabled]="!isPlayerListValide()">
+    Validate
+</button>
 
 
