Update game with player and set game to running state

--- a/src/app/player-selector/player-selector.component.html
+++ b/src/app/player-selector/player-selector.component.html
@@ -8,7 +8,7 @@
         <mat-icon svgIcon="remove"></mat-icon>
     </button>
 </div>
-<button mat-fab extended class="validate" [disabled]="!isPlayerListValide()">
+<button mat-fab extended class="validate" [disabled]="!isPlayerListValide()" (click)="validate()">
     Validate
 </button>
 
