--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -1,1 +1,12 @@
-<p>score-board works!</p>
+<table mat-table *ngIf="game" [dataSource]="game.rounds">
+    <ng-container matColumnDef="round">
+        <th mat-header-cell *matHeaderCellDef>Round</th>
+        <td mat-cell *matCellDef="let element; let idx = index">{{idx + 1}}</td>
+    </ng-container>
+    <ng-container *ngFor="let player of game.players" matColumnDef="{{player.id}}">
+        <th mat-header-cell *matHeaderCellDef>{{player.nickname}}</th>
+        <td mat-cell *matCellDef="let element">{{element.roundScores.get(player.id)}}</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef='getTableData()'></tr>
+    <tr mat-row *matRowDef="let row; columns: getTableData();"></tr>
+</table>
