--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -1,6 +1,9 @@
 <table mat-table *ngIf="game" [dataSource]="game.rounds">
     <ng-container matColumnDef="round">
-        <th mat-header-cell *matHeaderCellDef>Round</th>
+        <th mat-header-cell *matHeaderCellDef>
+            <div class="mainDescription">Round</div>
+            <div class="secondDescription">Number of cards</div>
+        </th>
         <td mat-cell *matCellDef="let element; let idx = index">{{idx + 1}}</td>
     </ng-container>
     <ng-container *ngFor="let player of game.players" matColumnDef="{{player.id}}">
