--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -4,12 +4,21 @@
             <div class="mainDescription">Round</div>
             <div class="secondDescription">Number of cards</div>
         </th>
-        <td mat-cell *matCellDef="let element; let idx = index">{{idx + 1}}</td>
+        <td mat-cell *matCellDef="let element; let idx = index">
+            <div class="round">{{idx + 1}}</div>
+            <div class="actions" *ngIf="game.currentRound === idx">
+                <button mat-button class="announcement" 
+                    (click)='activateAnnouncementPhase(element)' 
+                    [disabled]="element.status === RoundStatus.announcement">
+                        Announcements
+                </button>
+            </div>
+        </td>
     </ng-container>
     <ng-container *ngFor="let player of game.players" matColumnDef="{{player.id}}">
         <th mat-header-cell *matHeaderCellDef>{{player.nickname}}</th>
         <td mat-cell *matCellDef="let element">{{element.roundScores.get(player.id)}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef='getTableData()'></tr>
-    <tr mat-row *matRowDef="let row; columns: getTableData();"></tr>
+    <tr mat-row [ngClass]="{'current-round': game.currentRound === idx}" *matRowDef="let row; columns: getTableData(); let idx = index;"></tr>
 </table>
