--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -17,8 +17,15 @@
     </ng-container>
     <ng-container *ngFor="let player of game.players" matColumnDef="{{player.id}}">
         <th mat-header-cell *matHeaderCellDef>{{player.nickname}}</th>
-        <td mat-cell *matCellDef="let element">{{element.roundScores.get(player.id)}}</td>
+        <td mat-cell *matCellDef="let element;">
+            <input matInput 
+                type="number" 
+                class="announcement" 
+                [(ngModel)]="element.roundScores.get(player.id).announcement"
+                [disabled]="element.status === RoundStatus.results"
+                />
+        </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef='getTableData()'></tr>
-    <tr mat-row [ngClass]="{'current-round': game.currentRound === idx}" *matRowDef="let row; columns: getTableData(); let idx = index;"></tr>
+    <tr mat-row [ngClass]="{'current-round': game.currentRound === idx, 'invalidAnnouncement':!row.isAnnouncementValid()}" *matRowDef="let row; columns: getTableData(); let idx = index;"></tr>
 </table>
