--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -12,17 +12,28 @@
                     [disabled]="element.status === RoundStatus.announcement">
                         Announcements
                 </button>
+                <button mat-button class="results" 
+                    (click)='activateResultsPhase(element)'
+                    [disabled]="element.status === RoundStatus.results">
+                        Results
+                </button>
             </div>
         </td>
     </ng-container>
     <ng-container *ngFor="let player of game.players" matColumnDef="{{player.id}}">
         <th mat-header-cell *matHeaderCellDef>{{player.nickname}}</th>
-        <td mat-cell *matCellDef="let element;">
+        <td mat-cell *matCellDef="let element; let idx = index;">
             <input matInput 
                 type="number" 
                 class="announcement" 
                 [(ngModel)]="element.roundScores.get(player.id).announcement"
-                [disabled]="element.status === RoundStatus.results"
+                [disabled]="element.status === RoundStatus.results || game.currentRound !== idx"
+                />
+            <input matInput 
+                type="number" 
+                class="results" 
+                [(ngModel)]="element.roundScores.get(player.id).result"
+                [disabled]="element.status === RoundStatus.announcement || game.currentRound !== idx"
                 />
         </td>
     </ng-container>
